# webpoc

./: Cargo.toml  README.md  build.sh  check.sh  cnc-holder-hierarchy.mmd  cnc-tool-hierarchy.mmd  index.html  rust-toolchain  users.db
.github/workflows/: deploy.yml  pages.yml
backend/: Cargo.toml  cargo.toml  db.rs
backend/src/: db.rs  main.rs
backend/src/api/: auth.rs
frontend/: .gitignore  Cargo.toml  cargo.toml  index.html  trunk.toml
frontend/src/: app.rs  app_states.rs  database_interactions.rs  lib.rs  main.rs  singletons.rs
frontend/src/settings/: mod.rs  settings_sing_up.rs
frontend/src/widgets/: add_holder.rs  add_machine.rs  add_tool.rs  delete_machine.rs  edit_machine.rs  first_use.rs  gripper_fixed_widget.rs  gripper_widget.rs  library_widget.rs  magazine_widget.rs  mod.rs  settings_window.rs  sign_in.rs  sign_up.rs  unit_conversion.rs  welcome.rs
shared/: Cargo.toml
shared/src/: custom_traits.rs  description.rs  lib.rs  library.rs  machine.rs  magazine.rs  selection.rs  settings.rs
shared/src/holders/: holder.rs
shared/src/tools/: mod.rs  tool.rs
shared/src/tools/rotating/: broach.rs  drill.rs  holder.rs  mill.rs  mod.rs  tap.rs
shared/src/tools/turning/: lathe.rs  mod.rs
src/: app.rs  lib.rs  main.rs
