[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7"
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }
shared = { path = "../shared" }
dotenv = "0.15"
env_logger = "0.10"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
egui = "0.28"

[[bin]]
name = "backend"
path = "src/main.rs"
