[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9", features = ["openssl"] }
actix-cors = "0.7"
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }
shared = { path = "../shared" }
dotenv = "0.15"
env_logger = "0.10"
lazy_static = "1.4"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "backend"
path = "src/main.rs"
