[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enum-iterator = "2.1.0"
